--- a/9thclass.ipynb
+++ b/9thclass.ipynb
@@ -25,7 +25,7 @@
     }
    ],
    "source": [
-    "num_x = 10   # Global Variable\n",
+    "num_x = 10   # Global Variable.\n",
     "print(\"value of num_x outside function it's a Global Variable\", num_x) \n",
     "\n",
     "def hello():\n",
@@ -89,6 +89,83 @@
     "        print(f\"{user_input} x {num} = {user_input * num}\")\n",
     "except ValueError:\n",
     "    print(\"Please Enter Int. value\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "PYTHON SETS\n",
+    "1. Parenthisis diference {},\n",
+    "2. Only store unique values,\n",
+    "3. Unindexd item\n",
+    "4. Unordered Item \n",
+    "(add, remove, discard, pop, union, intersaction)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Sets in python\n",
+    "\n",
+    "boys_set = {\"Danish\",\"Zohaib\",\"Bilal\",\"Arfeen\"}\n",
+    "# print(len(boys_set))\n",
+    "girls_set = {\"Hafsa\",\"Zara\",\"Areeba\",\"Aqsa\"}\n",
+    "# print(type(girls_set))\n",
+    "mix_data_set = {\"Pakistan\", 112, True, 1, 404, \"male\"}\n",
+    "# print(len(mix_data_set))\n",
+    "\n",
+    "mix_data_set.update(boys_set) # update 2 sets\n",
+    "print(mix_data_set)\n",
+    "\n",
+    "# mix_data_set.add(\"Asghar\")  # add item\n",
+    "# print(mix_data_set)\n",
+    "\n",
+    "# boys_set.remove(\"akber\") #if item not exist then error will be show\n",
+    "# print(boys_set)\n",
+    "\n",
+    "# boys_set.discard(\"akber\") # no errorif value not exist\n",
+    "# print(boys_set)\n",
+    "\n",
+    "# x = mix_data_set.pop()  #rendom item removed\n",
+    "# print(x)\n",
+    "\n",
+    "# mix_data_set.clear() # list will be cleared\n",
+    "# print(mix_data_set)\n",
+    "\n",
+    "# del mix_data_set # set will be delete\n",
+    "# print(mix_data_set)\n",
+    "\n",
+    "# girls_set.copy() # for making a copy of set \n",
+    "# print(girls_set)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{1, 2, 3, 4, 5}\n",
+      "{3}\n"
+     ]
+    }
+   ],
+   "source": [
+    "set_1 = {1,2,3}\n",
+    "set_2 = {3,4,5}\n",
+    "\n",
+    "result = set_1.union(set_2)\n",
+    "print(result)\n",
+    "\n",
+    "result2 = set_1.intersection(set_2)\n",
+    "print(result2)"
    ]
   },
   {
